Shifted and expanded the source code viewer header bar. Fixed linking problem in the drop down menu system.

--- a/trunk/css/index.css
+++ b/trunk/css/index.css
@@ -4,7 +4,7 @@ html,body {
   margin:0px;
   padding:0px;
   height:100%;
-  background:fffae5; 
+  background:#fffae5;
   font-family:verdana; 
   font-size:12px;
 }
@@ -34,7 +34,7 @@ html,body {
 #content {
   width:940px;
   padding:20px 20px 0px 20px;
-  background:deffd9;
+  background:#deffd9;
   min-height:400px;
   -moz-border-radius:10px 0px 10px 10px;
   -webkit-border-top-left-radius:10px;
